--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 },
                 
             },
-            computed: { // computed properties  enable you to create a property that can be used to modify,
+            computed: { 
                 // manipulate, and display data within your components in a readable and efficient manner.
                 sortedSubjects() {
                  // filter subjects by search input
